06-despliegue-local/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway
          image: localhost:5000/gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8080
        initialDelaySeconds: 3
        periodSeconds: 3
