06-despliegue-local/help-desk-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: help-desk-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: help-desk-app
  template:
    metadata:
      labels:
        app: help-desk-app
    spec:
      containers:
        - name: help-desk
          image: localhost:5000/help-desk
          imagePullPolicy: Always
          ports:
            - containerPort: 3070
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3070
            initialDelaySeconds: 3
            periodSeconds: 3
