06-despliegue-local/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  type: ClusterIP
  selector:
    app: gateway-app
  ports:
    - port: 80
      targetPort: 3020
      protocol: TCP
